Correct span align for Chrome

--- a/main.css
+++ b/main.css
@@ -140,6 +140,7 @@ body {
   padding-top: 5px;
   font-size: 11px;
   color: #444;
+  text-align: start;
 }
 
 .form-fieldset input[type="tel"] {
